--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Where In The World</title>
-    <!-- Add The Favicon -->
+    <!-- Favicon -->
     <link
       rel="shortcut icon"
       href="../public/favicon.ico"
       type="image/x-icon" />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="../public/main.css" />
   </head>
   <body></body>
 </html>
