--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,17 @@
       href="../public/favicon.ico"
       type="image/x-icon" />
 
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,600;6..12,800&display=swap"
+      rel="stylesheet" />
+
     <!-- CSS -->
     <link rel="stylesheet" href="../public/main.css" />
   </head>
-  <body></body>
+  <body>
+    <p>hello</p>
+  </body>
 </html>
