--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,21 @@
     <link rel="stylesheet" href="../public/main.css" />
   </head>
   <body>
-    <p>hello</p>
+    <header class="bg-blue text-white">
+      <div class="container p-4 lg:p-6 flex justify-between items-center">
+        <p class="sm:text-sm md:text-lg lg:text-xl xl:text-2xl font-extrabold">
+          Where in the world?
+        </p>
+        <button
+          class="flex items-center gap-1 md:gap-3 outline-none text-xs md:text-sm">
+          <img
+            src="../public/icons/moon.svg"
+            alt="Moon icon"
+            class=" w-3 md:w-4" />
+          <span>Dark Mode</span>
+        </button>
+      </div>
+    </header>
+    <main class=""></main>
   </body>
 </html>
