Add the light mode to the header

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Where In The World</title>
     <!-- Favicon -->
     <link
       rel="shortcut icon"
@@ -19,17 +18,20 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="../public/main.css" />
+
+    <title>Where In The World</title>
   </head>
   <body>
-    <header class="bg-blue text-white">
+    <header class="bg-white text-veryDarkBlue dark:bg-blue  dark:text-white shadow-md">
       <div class="container p-4 lg:p-6 flex justify-between items-center">
-        <p class="sm:text-sm md:text-lg lg:text-xl xl:text-2xl font-extrabold">
+        <p class="font-extrabold sm:text-sm md:text-lg lg:text-xl xl:text-2xl ">
           Where in the world?
         </p>
         <button
           class="flex items-center gap-1 md:gap-3 outline-none text-xs md:text-sm">
+          <!-- src="../public/icons/moon.svg" -->
           <img
-            src="../public/icons/moon.svg"
+            src="../public/icons/moon-outline.svg"
             alt="Moon icon"
             class=" w-3 md:w-4" />
           <span>Dark Mode</span>
