--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,600;6..12,800&display=swap"
       rel="stylesheet" />
 
-    <!-- Scrips -->
+    <!-- Scripts -->
     <script src="./src/JS/main.js" defer></script>
 
     <!-- CSS -->
