--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
   </head>
   <body>
     <header
-      class="bg-white text-veryDarkBlue dark:bg-blue dark:text-white shadow-md z-50">
-      <div class="container px-6 py-7 flex justify-between items-center">
+      class="z-50 bg-white shadow-md text-veryDarkBlue dark:bg-blue dark:text-white">
+      <div class="container flex items-center justify-between px-6 py-7">
         <p class="font-extrabold sm:text-sm md:text-lg lg:text-xl xl:text-2xl ">
           Where in the world?
         </p>
         <button
           id="dark-mode-btn"
-          class="flex items-center gap-1 md:gap-3 outline-none text-xs md:text-sm">
+          class="flex items-center gap-1 text-xs outline-none md:gap-3 md:text-sm">
           <!-- src="../public/icons/moon.svg" -->
           <img
             src="./public/icons/moon-outline.svg"
@@ -45,27 +45,27 @@
     </header>
     <!---------------------------->
     <main
-      class="bg-lightGray dark:bg-darkBlue  min-h-screen py-10 px-5 dark:text-white text-darkBlue">
+      class="min-h-screen px-5 py-10 bg-lightGray dark:bg-darkBlue dark:text-white text-darkBlue">
       <div class="container">
         <!-------->
-        <div class="flex items-start gap-8 flex-col md:flex-row md:items-center md:justify-between">
+        <div class="flex flex-col items-start gap-8 md:flex-row md:items-center md:justify-between">
           <div
             onclick="document.getElementById('search-input').focus()"
-            class="focus-within:outline dark:text-white bg-white dark:bg-blue cursor-text duration-75 flex items-center justify-start rounded py-2 px-4 sm:py-4 w-96 sm:px-6 shadow-lg gap-2 max-w-full">
+            class="flex items-center justify-start max-w-full gap-2 px-4 py-2 duration-75 bg-white rounded shadow-lg focus-within:outline dark:text-white dark:bg-blue cursor-text sm:py-4 w-96 sm:px-6">
             <img
               src="./public/icons/IcBaselineSearch.svg"
               alt="Search lens icon"
-              class="text-darkGray w-5" />
+              class="w-5 text-darkGray" />
             <input
               id="search-input"
               type="text"
               placeholder="Search for a country..."
-              class="outline-none bg-inherit font-semibold grow max-w-full " />
+              class="max-w-full font-semibold outline-none bg-inherit grow " />
           </div>
           <select
             name="region-filter"
             id="region-filter"
-            class="outline-none text-base bg-white dark:bg-blue  py-2 md:py-4 px-1 sm:px-2 shadow-none rounded font-semibold">
+            class="px-1 py-2 text-base font-semibold bg-white rounded shadow-none outline-none dark:bg-blue md:py-4 sm:px-2">
             <option value="" class="font-semibold text-inherit">Filter by Region</option>
             <option value="Africa" class="font-semibold text-inherit">Africa</option>
             <option value="Americas" class="font-semibold text-inherit">Americas</option>
