Improve the dark mode button and change the icons

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         <button
           id="dark-mode-btn"
           class="flex items-center gap-1 text-xs outline-none md:gap-3 md:text-sm">
-          <!-- src="../public/icons/moon.svg" -->
           <img
-            src="./public/icons/moon-outline.svg"
+            src="./public/icons/moon.svg"
             alt="Moon icon"
             class="w-3 md:w-4" />
           <span>Dark Mode</span>
