--- a/index.html
+++ b/index.html
@@ -1,81 +1,64 @@
 <!doctype html>
-<html lang="en" >
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Favicon -->
-    <link
-      rel="shortcut icon"
-      href="./public/favicon.ico"
-      type="image/x-icon" />
+<html lang="en">
 
-    <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,600;6..12,800&display=swap"
-      rel="stylesheet" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon" />
 
-    <!-- Scripts -->
-    <script src="./src/JS/main.js" defer></script>
+  <!-- Google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,600;6..12,800&display=swap"
+    rel="stylesheet" />
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="./public/main.css" />
+  <!-- Scripts -->
+  <script src="./src/JS/main.js" defer></script>
 
-    <title>Where In The World</title>
-  </head>
-  <body>
-    <header
-      class="z-50 bg-white shadow-md text-veryDarkBlue dark:bg-blue dark:text-white">
-      <div class="container flex items-center justify-between px-6 py-7">
-        <p class="font-extrabold sm:text-sm md:text-lg lg:text-xl xl:text-2xl ">
-          Where in the world?
-        </p>
-        <button
-          id="dark-mode-btn"
-          class="flex items-center gap-1 text-xs outline-none md:gap-3 md:text-sm">
-          <img
-            src="./public/icons/moon.svg"
-            alt="Moon icon"
-            class="w-3 md:w-4" />
-          <span>Dark Mode</span>
-        </button>
-      </div>
-    </header>
-    <!---------------------------->
-    <main
-      class="min-h-screen px-5 py-10 bg-lightGray dark:bg-darkBlue dark:text-white text-darkBlue">
-      <div class="container">
-        <!-------->
-        <div class="flex flex-col items-start gap-8 md:flex-row md:items-center md:justify-between">
-          <div
-            onclick="document.getElementById('search-input').focus()"
-            class="flex items-center justify-start max-w-full gap-2 px-4 py-2 duration-75 bg-white rounded shadow-lg focus-within:outline dark:text-white dark:bg-blue cursor-text sm:py-4 w-96 sm:px-6">
-            <img
-              src="./public/icons/IcBaselineSearch.svg"
-              alt="Search lens icon"
-              class="w-5 text-darkGray" />
-            <input
-              id="search-input"
-              type="text"
-              placeholder="Search for a country..."
-              class="max-w-full font-semibold outline-none bg-inherit grow " />
-          </div>
-          <select
-            name="region-filter"
-            id="region-filter"
-            class="px-1 py-2 text-base font-semibold bg-white rounded shadow-none outline-none dark:bg-blue md:py-4 sm:px-2">
-            <option value="" class="font-semibold text-inherit">Filter by Region</option>
-            <option value="Africa" class="font-semibold text-inherit">Africa</option>
-            <option value="Americas" class="font-semibold text-inherit">Americas</option>
-            <option value="Asia" class="font-semibold text-inherit">Asia</option>
-            <option value="Europe" class="font-semibold text-inherit">Europe</option>
-            <option value="Oceania" class="font-semibold text-inherit">Oceania</option>
-          </select>
+  <!-- CSS -->
+  <link rel="stylesheet" href="./public/main.css" />
+
+  <title>Where In The World</title>
+</head>
+
+<body>
+  <header class="z-50 bg-white shadow-md text-veryDarkBlue dark:bg-blue dark:text-white">
+    <div class="container flex items-center justify-between px-6 py-7">
+      <p class="font-extrabold sm:text-sm md:text-lg lg:text-xl xl:text-2xl ">
+        Where in the world?
+      </p>
+      <button id="dark-mode-btn" class="flex items-center gap-1 text-xs outline-none md:gap-3 md:text-sm">
+        <img src="./public/icons/moon.svg" alt="Moon icon" class="w-3 md:w-4" />
+        <span>Dark Mode</span>
+      </button>
+    </div>
+  </header>
+  <!---------------------------->
+  <main class="min-h-screen px-5 py-10 bg-lightGray dark:bg-darkBlue dark:text-white text-darkBlue">
+    <div class="container">
+      <!-------->
+      <div class="flex flex-col items-start gap-8 md:flex-row md:items-center md:justify-between">
+        <div onclick="document.getElementById('search-input').focus()"
+          class="flex items-center justify-start max-w-full gap-2 px-4 py-2 duration-75 bg-white rounded shadow-lg focus-within:outline dark:text-white dark:bg-blue cursor-text sm:py-4 w-96 sm:px-6">
+          <img src="./public/icons/IcBaselineSearch.svg" alt="Search lens icon" class="w-5 text-darkGray" />
+          <input id="search-input" type="text" placeholder="Search for a country..."
+            class="max-w-full font-semibold outline-none bg-inherit grow " />
         </div>
-        <!-------->
-        <div id="cards-container"></div>
+        <select name="region-filter" id="region-filter"
+          class="px-1 py-2 text-base font-semibold bg-white rounded shadow-none outline-none dark:bg-blue md:py-4 sm:px-2">
+          <option value="" class="font-semibold text-inherit">Filter by Region</option>
+          <option value="Africa" class="font-semibold text-inherit">Africa</option>
+          <option value="Americas" class="font-semibold text-inherit">Americas</option>
+          <option value="Asia" class="font-semibold text-inherit">Asia</option>
+          <option value="Europe" class="font-semibold text-inherit">Europe</option>
+          <option value="Oceania" class="font-semibold text-inherit">Oceania</option>
+        </select>
       </div>
-    </main>
-  </body>
+      <!-------->
+      <div id="cards-container"></div>
+    </div>
+  </main>
+</body>
+
 </html>
