make the cards from the reseived data from the api in just light theme

--- a/index.html
+++ b/index.html
@@ -56,7 +56,18 @@
         </select>
       </div>
       <!-------->
-      <div id="cards-container"></div>
+      <div id="cards-container" class="grid grid-cols-4 gap-20 p-10">
+        <div class="card">
+          <img src="https://flagcdn.com/sa.svg" alt="">
+          <div>
+            <h3>Saudi Arabia</h3>
+            <p>Population: <span>30,809,000</span></p>
+            <p>Region: <span>Asia</span></p>
+            <p>Capital: <span>Ryahd</span></p>
+          </div>
+        </div>
+
+      </div>
     </div>
   </main>
 </body>
