Add functionalty to the filter by region

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </select>
       </div>
       <!-------->
-      <div id="cards-container" style="grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));"
+      <div id="cards-container" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));"
         class="grid gap-20 p-10"></div>
     </div>
   </main>
