improve the card container style

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Find information and flags for countries around the world." />
+  <meta name="keywords" content="country, flag, map, location, information, facts, travel, tourism" />
+
   <!-- Favicon -->
   <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon" />
 
@@ -56,8 +59,7 @@
         </select>
       </div>
       <!-------->
-      <div id="cards-container" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));"
-        class="grid gap-20 p-10"></div>
+      <div id="cards-container" class="cards-container"></div>
     </div>
   </main>
 </body>
