--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
           <input id="search-input" type="text" placeholder="Search for a country..."
             class="max-w-full font-semibold outline-none bg-inherit grow" />
         </div>
-        <div class="flex items-center gap-5">
-          <label for="region-filter">Filter by Region</label>
+        <div class="flex items-center gap-5 ml-5 ">
+          <label for="region-filter" class="font-semibold">Filter by Region</label>
           <select name="region-filter" id="region-filter"
-            class="px-1 py-2 text-base font-semibold bg-white rounded shadow-none outline-none dark:bg-blue md:py-4 sm:px-2">
+            class="px-1 py-2 text-base bg-white rounded shadow-none outline-none dark:bg-blue md:py-4 sm:px-2">
             <option value="All" class="font-semibold text-inherit">All</option>
             <option value="Africa" class="font-semibold text-inherit">Africa</option>
             <option value="Americas" class="font-semibold text-inherit">Americas</option>
