Handel the search input

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <label for="search-input">
             <img src="./public/icons/IcBaselineSearch.svg" alt="Search lens icon" class="w-5 text-darkGray" />
           </label>
-          <input id="search-input" type="text" placeholder="Search for a country..."
+          <input id="search-input" type="search" placeholder="Search for a country..."
             class="max-w-full font-semibold outline-none bg-inherit grow" />
         </div>
         <div class="flex items-center gap-5 ml-5 ">
