--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       <!-------->
       <div class="flex flex-col items-start gap-8 md:flex-row md:items-center md:justify-between">
         <div onclick="document.getElementById('search-input').focus()"
-          class="flex items-center justify-start max-w-full gap-2 px-4 py-2 duration-75 bg-white rounded shadow-lg focus-within:outline dark:text-white dark:bg-blue cursor-text sm:py-4 w-96 sm:px-6">
+          class=" bg-white dark:bg-blue flex items-center justify-start max-w-full gap-2 px-4 py-2 rounded shadow-lg focus-within:outline dark:text-white cursor-text sm:py-4 w-96 sm:px-6">
           <label for="search-input">
-            <img src="./public/icons/IcBaselineSearch.svg" alt="Search lens icon" class="w-5 text-darkGray" />
+            <img src="./public/icons/IcBaselineSearch.svg" alt="Search lens icon" class="w-5 text-darkGray  " />
           </label>
           <input id="search-input" type="search" placeholder="Search for a country..."
             class="max-w-full font-semibold outline-none bg-inherit grow" />
